[package]
name = "token_wallet_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.8.0"
ic-cdk-macros = "0.8.0"
candid = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
